# try_encrypted_fields

./: .gitignore  LICENSE  MANIFEST.in  README.rst  make_migrations.py  migrations_settings.py  runtests.py  setup.cfg  tox.ini
enc_field/: apps.py  models.py  tests.py
enc_field/migrations/: 0001_initial.py
