[metadata]
name = enc_field
version = 0.0.1
author = Ali Javanmardizadeh
author_email = a.javanmardi@gmail.com
description = This is a test to reproduce error happened by django-fernet-encrypted-fields.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://www.Jalnext.com/
license = MIT License 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  
    Intended Audience :: Jalnext Developers
    License :: MIT License 
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Private :: Do Not Upload
    
[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 4.0
    django-fernet-encrypted-fields >= 0.1.1

